--- a/.github/workflows/create-plugin-zip.yml
+++ b/.github/workflows/create-plugin-zip.yml
@@ -20,9 +20,9 @@ jobs:
           PLUGIN_NAME="ihumbak-woo-order-edit-logs"
           ZIP_NAME="${PLUGIN_NAME}-${VERSION}.zip"
 
-          mkdir ${PLUGIN_NAME}
+          mkdir -p ${PLUGIN_NAME}/${PLUGIN_NAME}
 
-          cp -r assets includes languages ihumbak-woo-order-edit-logs.php ./${PLUGIN_NAME}
+          cp -r assets includes languages ihumbak-woo-order-edit-logs.php ./${PLUGIN_NAME}/${PLUGIN_NAME}
           echo "ZIP_NAME=${ZIP_NAME}" >> $GITHUB_ENV
           echo "PLUGIN_NAME=${PLUGIN_NAME}" >> $GITHUB_ENV
 
