--- a/.github/workflows/create-plugin-zip.yml
+++ b/.github/workflows/create-plugin-zip.yml
@@ -22,13 +22,12 @@ jobs:
 
           mkdir -p ${PLUGIN_NAME}/${PLUGIN_NAME}
 
-          cp -r assets includes languages ihumbak-woo-order-edit-logs.php ./${PLUGIN_NAME}/${PLUGIN_NAME}
+          cp -r assets includes languages ihumbak-woo-order-edit-logs.php ./${PLUGIN_NAME}
           echo "ZIP_NAME=${ZIP_NAME}" >> $GITHUB_ENV
           echo "PLUGIN_NAME=${PLUGIN_NAME}" >> $GITHUB_ENV
 
       - name: Upload ZIP as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.ZIP_NAME }}
-          path: ${{ env.PLUGIN_NAME }}/${{ env.PLUGIN_NAME }}
+          path: ${{ env.PLUGIN_NAME }}
           retention-days: 30
