--- a/.github/workflows/create-plugin-zip.yml
+++ b/.github/workflows/create-plugin-zip.yml
@@ -29,5 +29,6 @@ jobs:
       - name: Upload ZIP as artifact
         uses: actions/upload-artifact@v4
         with:
+          name: ${{ env.PLUGIN_NAME }}
           path: ${{ env.PLUGIN_NAME }}
           retention-days: 30
