--- a/.github/workflows/create-plugin-zip.yml
+++ b/.github/workflows/create-plugin-zip.yml
@@ -31,5 +31,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ env.PLUGIN_NAME }}
-          path: ${{ env.PLUGIN_NAME }}
+          path: ${{ env.ZIP_NAME }}.zip
           retention-days: 30
